# cuda-etudes

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  main.cpp  meson.build
.github/workflows/: ci.yml
etudes/: add.cu  add.h  etudes.h  gauss_jordan.cu  gauss_jordan.h  matmul.cu  matmul.h  meson.build  rmh.cu  rmh.h
include/: etudes.h  meson.build
include/etudes/: add.h  gauss_jordan.h  matmul.h  matrix.h  pca.h  vector.h
src/: 01-add.cu  02-matmul.cu  03-gauss_jordan.cu  add.cu  meson.build  pca.cu  vector.cu
